--- a/gmosbook/package.json
+++ b/gmosbook/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "element-plus": "^2.8.8",
     "pinia": "^2.2.6",
+    "sass": "^1.81.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
