--- a/gmosbook/package.json
+++ b/gmosbook/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.8.8",
+    "emailjs-com": "^3.2.0",
     "pinia": "^2.2.6",
     "sass": "^1.81.0",
     "vue": "^3.5.12",
